[project]
name = "tau2-partial"
version = "0.1.0"
description = "Tau2 Evaluator for partial credits"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
tau2-evaluator = [
    "nest-asyncio>=1.6.0",
    "tau2 @ git+https://github.com/sierra-research/tau2-bench.git",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
